--- a/my_school/mainapp/templates/mainapp/course_detail.html
+++ b/my_school/mainapp/templates/mainapp/course_detail.html
@@ -20,6 +20,6 @@
             </div>
             <p class="course-descr">{{ object.description }}</p>
         </div>
-        <a href="#" class="start btn btnPrimary">Начать учиться!</a>
+        <a href="{% url 'course:page' object.pk %}" class="start btn btnPrimary">Начать учиться!</a>
     </section>
 {% endblock content %}
