--- a/my_school/mainapp/templates/mainapp/course_list.html
+++ b/my_school/mainapp/templates/mainapp/course_list.html
@@ -21,7 +21,7 @@
                     <div class="level"></div>
                     <span class="level-title">Начальный</span>
                 </div>
-                <a href="{% url 'main:course' course.pk %}" class="start-learning">Подробнее<img
+                <a href="{% url 'mainapp:course_info' course.pk %}" class="start-learning">Подробнее<img
                         src="{% static '/img/arrow-forward-outline.svg' %}" alt=""></a>
             </div>
         </article>
