--- a/my_school/mainapp/templates/mainapp/base.html
+++ b/my_school/mainapp/templates/mainapp/base.html
@@ -12,32 +12,33 @@
     {% endblock js %}
 </head>
 <body>
-    <header>
-        <nav class="header">
-            <a href="{% url 'main:index' %}" class="logo logo-title"><img src="{% static '/img/library-outline.svg' %}" alt="" class="logo-img">Школа</a>
-            <div class="right-side">
-                <div class="nav-search">
-                    <input type="text" placeholder="Что вы хотите выучить?">
-                    <img src="{% static '/img/search-outline.svg' %}" alt="">
-                </div>
-                <a href="{% url 'main:contact' %}" class="btn">Контакты</a>
-                {% if user.is_authenticated %}
-                <a href="{% url 'auth:logout' %}" class="btn">Выйти</a>
-                {% else %}
-                <a href="{% url 'auth:login' %}" class="btn">Войти</a>
-                    <a href="{% url 'auth:create' %}" class="btn btnPrimary">Зарегистрироваться</a>
-                {% endif %}
+<header>
+    <nav class="header">
+        <a href="{% url 'main:index' %}" class="logo logo-title"><img src="{% static '/img/library-outline.svg' %}"
+                                                                      alt="" class="logo-img">Школа</a>
+        <div class="right-side">
+            <div class="nav-search">
+                <input type="text" placeholder="Что вы хотите выучить?">
+                <img src="{% static '/img/search-outline.svg' %}" alt="">
             </div>
-        </nav>
-    </header>
-    <main>
-        <div class="wrapper-content">
-            {% block content %}
-            {% endblock content %}
+            <a href="{% url 'main:contact' %}" class="btn">Контакты</a>
+            {% if user.is_authenticated %}
+                <a href="{% url 'auth:logout' %}" class="btn">Выйти</a>
+            {% else %}
+                <a href="{% url 'auth:choice' %}" class="btn">Войти</a>
+                <a href="{% url 'auth:create' %}" class="btn btnPrimary">Зарегистрироваться</a>
+            {% endif %}
         </div>
-    </main>
-    <footer>
+    </nav>
+</header>
+<main>
+    <div class="wrapper-content">
+        {% block content %}
+        {% endblock content %}
+    </div>
+</main>
+<footer>
 
-    </footer>
+</footer>
 </body>
 </html>
